<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary_light"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_stats_success"
        style="@style/StatsPage.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/tv_stats_collected"
        app:layout_constraintEnd_toEndOf="@+id/tv_stats_collected"
        app:layout_constraintStart_toStartOf="@+id/tv_stats_collected" />

    <TextView
        android:id="@+id/tv_stats_collected"
        style="@style/StatsPage.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.547"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_stats_attempts"
        style="@style/StatsPage.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/tv_stats_success"
        app:layout_constraintEnd_toEndOf="@+id/tv_stats_collected"
        app:layout_constraintStart_toStartOf="@+id/tv_stats_collected" />

    <Button
        android:id="@+id/btn_reset"
        style="@style/StatsPage.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/btn_reset"
        app:layout_constraintEnd_toEndOf="@+id/tv_stats_collected"
        app:layout_constraintHorizontal_bias="0.424"
        app:layout_constraintStart_toStartOf="@+id/tv_stats_collected"
        app:layout_constraintTop_toBottomOf="@+id/tv_stats_collected" />

    <TextView
        style="@style/StatsPage.Text"
        android:id="@+id/tv_stats_last"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/tv_stats_attempts"
        app:layout_constraintEnd_toEndOf="@+id/tv_stats_collected"
        app:layout_constraintStart_toStartOf="@+id/tv_stats_collected" />

    <TextView
        android:id="@+id/textView13"
        style="@style/LevelsPage.Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_stats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_stats_exit"
        style="@style/StatsPage.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/btn_stats_exit"
        app:layout_constraintEnd_toEndOf="@+id/btn_reset"
        app:layout_constraintStart_toStartOf="@+id/btn_reset"
        app:layout_constraintTop_toBottomOf="@+id/btn_reset" />

</androidx.constraintlayout.widget.ConstraintLayout>